--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,3 +12,14 @@ services:
       - "8000:8000"
     depends_on:
       - db
+  front:
+    build:
+      context: .
+      dockerfile: frontend/Dockerfile
+    command: npm start
+    volumes:
+      - .:/code
+    ports:
+      - "3000:3000"
+    depends_on:
+      - web
